--- a/package.json
+++ b/package.json
@@ -7,18 +7,33 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:push": "prisma db push",
+    "setup:phase0": "node scripts/setup-phase0.js"
   },
   "dependencies": {
     "next": "15.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@prisma/client": "^5.7.1",
+    "prisma": "^5.7.1",
+    "jsonwebtoken": "^9.0.2",
+    "stripe": "^14.10.0",
+    "@supabase/supabase-js": "^2.38.5",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "typescript": "^5"
