--- a/.github/workflows/prisma-db-push.yml
+++ b/.github/workflows/prisma-db-push.yml
@@ -19,10 +19,10 @@ jobs:
         run: npm install --no-audit --no-fund
 
       - name: Generate Prisma Client
-        run: npx prisma generate
+        run: npx prisma@5 generate
 
       - name: Push schema to Supabase
-        run: npx prisma db push
+        run: npx prisma@5 db push
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
